...
    <string name="net_error_10003">Data parsing failed</string>
    <!--error string end-->

    <string name="source_http_header">HTTP Header</string>
    <string name="debug_source">Debug source</string>
    <string name="import_by_qr_code">Import from QR code</string>
    <string name="share_selected_source">Share selected sources</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="click_on_selected_show_menu">Tap to display Menu when selected </string>
    <string name="theme">Theme</string>
    <string name="theme_mode">Theme mode</string>
    <string name="theme_mode_desc">Select a theme you want</string>
    <string name="join_qq_group">Join QQ group</string>
...
    <string name="add_replace_rule">New replacement</string>
    <string name="group">Group</string>
    <string name="group_s">Group: %s</string>
    <string name="toc_s">Chapters: %s</string>
    <string name="enable_explore">Enable Discovery</string>
    <string name="disable_explore">Disable Discovery</string>
    <string name="enable_selection">Enable selected</string>
    <string name="disable_selection">Disable selected</string>
    <string name="export_selection">Export selected</string>
    <string name="export">Export</string>
    <string name="load_toc">Load chapters</string>
    <string name="load_info">Load book detail</string>
    <string name="tts">TTS</string>
    <string name="web_dav_pw">WebDav password</string>
    <string name="web_dav_pw_s">Input you WebDav authorized password</string>
...
